完成《禅修中的能量缺失与充能吸能》系列

--- a/20.md
+++ b/20.md
@@ -25,3 +25,145 @@
 * 紫圣不是万能，祂不能替你解决问题，祂只能告诉你解决问题的方法，最终还是需要自己踏实地去修。
 * 因此，寄望于紫圣降临之后，自己全部问题都会消失，是不切实际的想法。
 
+
+
+# 禅修絮语
+
+
+
+## 摘录
+
+> 这个你的“意识体”具备你自己的形象，且是由你给Ta提供生存的能量，当Ta突破能量阈值，Ta就成灵成精，然后不断的每天每夜的向你索取Ta存在所必须拥有的意识能量。
+>
+> 这种“索取”，就是Ta让你不断的想着Ta，不停的想Ta。因为你想Ta的意识就是给Ta蓄能充能，然后Ta就不断强大，不断长大。
+>
+> 而Ta不断强大、不断长大后对你就有更强大的“索取”能力，这就使你进入了恶性循环，不断的在脑子里出现各种现实中没有的场景，这就是“幻视幻听”的来源。
+>
+> 当你进入到这种“幻视幻听”的状态后，你基本就已经到达“不可控”的状态了。很多的精神疾病患者，都深深的陷在这种“幻视幻听”之中。
+>
+> 这种“幻视幻听”是在意识世界的你的“幻我”导致的，你这个“幻我”不是个省油的灯，Ta不会老老实实在那坐着呆着，Ta会满处转悠、瞎逛瞎玩，所以招一些狐朋狗友、妖魔鬼怪一点也不奇怪。
+>
+> 因此，有“幻视幻听”状况的，基本都有严重的附体。就算以前没附体，“幻我”满世界瞎溜达、也能招一堆回来。所以，“幻视幻听”的精神疾病患者会有“魔音魔影”出现、就是常态。
+
+
+
+> 很多低禅级的同学入定时做的清理，都是清理自己的意识雾霾，妄念画面，垃圾意识，表意识的记忆残留，这些仅仅属于“在屋里打苍蝇”级别的难度系数，而业力的清理则完全不是一回事儿，属于“在瓷砖地面的屋里挖地道”的难度系数。根本不在一个量级。
+
+
+
+> 现在要加一句，“禅修修的是意识，与苦没有关系，不苦的人也能禅修。”
+>
+> 不仅是“不苦的人也能禅修”，而且宝系禅讲求的是“快乐禅修”，不仅不苦，而且有乐。一天不笑你就错。嘿，这个多好！
+
+
+
+> **修到高级状态就必须要打开智慧。这种打开智慧就是要通过不断的脑激发，不断的深定守境，不断的与高灵连接，不断的将自己无数前世的经验提炼为瞬间的直觉和脱口而出的直击核心的语言，以及由观想练出来的强力的无穷的想象力、从你“脑仓库”里直接搜寻到正确答案的强悍能力。**
+
+
+
+> 每一个人的每一次自我清理都是你自我救赎的一部分。都是你通向更高境界的一个台阶。也是你不断深挖，向着自己灵体更深处开掘的行动。
+
+
+
+> 换言之，自我奋斗的转运模式，根本就不是一天一周一月一年的事儿！
+>
+> 所以，你打算扛多久？经常性的恐惧、痛苦、忧愁、焦虑、无奈、没钱、谣言、诋毁、动摇、怯懦、怀疑、等等N多负面情绪、N多劝离、N多泄气、颓丧，你能扛多久？
+>
+> ...
+>
+> 这就是业力！它比你想象的力量大的多的、多的、多的、多的多！
+
+
+
+> 如果你成功的建立了这个正确的禅修人生观，你就成功了一半，你建立的不完全、还有疑惑、那就是你在业力拉扯过程中“暂时胜利”的标志。但这种“暂时胜利”也将埋下隐患，就是未来的某个时间点，你就会业力发作，失去这个“暂时胜利”的果实，如果业力发作的比较严重，你就会瞬间被你的业力拉回原来的命运线之内，继续你原来的人生。
+>
+> 如果业力发作程度较轻，或者有高功力的人搭救你，你可能会扛过这个发作期，在一段反复的拉扯后，你或者成功避险，也或者再次被业力拉回去。没有人能给你一个定论。这完全取决于你自己的意志力。
+
+## 感悟
+
+* **清理业力**和**清理意识垃圾**是两回事！
+
+* 不断想即不断给幻我充能，幻我充能长大后满世界溜达，招惹了附体
+
+  
+
+# 禅修中的能量缺失与充能吸能
+
+## 摘录
+
+> 禅修者有六种能量——【1】肉体的能量；【2】灵体的能量；【3】意识的能量；【4】业力的能量；【5】因果的能量；【6】法界的能量。
+>
+> 你可以根据自己的状态，在这六个方面进行调整。**先把负面的那些清除掉。然后在六个方面进行不同的补充**。这对低谷期的同学是很直接的提升手段。
+>
+> （1）提升肉体的能量，**一个是吃，一个是睡，一个是快乐，一个是晒太阳充能**。
+>
+> （2）提升灵体的能量就是做**灵体充能，做养生禅**。多在**本群做互动。多接收群能量**，多接收其他高水平同学的能量。多去宝光天**接收宝光世界的能量**。多做观想，在我头像的太阳里或在现实生活之中的太阳里多做闭眼观想，不要直视太阳。也可以**观想高灵，与高灵融合为一**。
+>
+> （3）提升意识的能量，就是拒绝与低灵同频，并且要与高灵同频。**每天用较多时间阅读宝师文集**是提升自己正心、正信、正念、最直接的方法。也可以多看本群同学制作的那些小视频。这会让你的意识产生能量，提升你自己的能量值。
+>
+> （4）提升业力的正向能量就是**清理，积福，行善**。
+>
+> （5）提升因果的正向能量，最好的办法就是**拜忏**。如果有功力就做深度清理。在清理恶业的同时，也会转化一些因果。
+>
+> （6）提升法界的能量就是**祈求高灵加持**，由于你在现实生活不入定的状态下，体感并不是非常明显，所以这种加持尽量在禅定之中呼唤。换言之，你就要保持经常性的打坐，才能在定中更好的呼唤高灵并获得加持。
+
+
+
+> 所有以为禅修了、有境界了、高境界了、修了某功法了、就可以不睡觉的，全都是错误的。某些禅修书籍里讲的“不倒单”在宝系禅的实验报告里，就是错误的！不要学那些。另外某些行禅的功法里也有走三天三夜或几天几夜不睡觉、一边走一边念佛的，也不建议去学。完全属于“自虐虐他、自害害他、自毁毁他”的瞎整。
+
+
+
+> 也就是说，**你脑子里想的每个人事物、其实都是在“消耗你的意识能量”**。
+>
+> ......
+>
+> 你坐在沙发里，表面看着没动，其实脑子里翻江倒海的想各种事，想各种人，想各种过去未来，联合国难民署的计划你都要想想，与你有关、与你没关、你认为与你有关、你认为与你没关其实与你有关的事儿，这些所有的“思想动作、意识生灭”都是耗能的，**说的更严谨一些，这都是你的“精神内耗”**。
+>
+> ......
+>
+> 耗能问题就是，你关注什么，什么就会消耗你的能量。
+>
+> ......
+>
+> 为什么禅修打坐之后都会浑身轻松？这是N多在宝禅群里打坐同学的共同感觉。**就是因为你放下了很多，至少暂时放下了很多，你减少了精神内耗，至少你暂时的减少了内耗。你在禅定中处于“只观察、不参与”的状态，你不断的主动的杀灭妄念，这都与“普通人放任精神内耗、不去停止内耗”的做法完全不同**。
+
+
+
+> 总之，**能量不够就会退转**，轻一些的就是停步、禅修止步不前。
+>
+> ......
+>
+> 而这一切的起因，**就是你向上的精进能量不足导致的**，开始时一点点的能量缺失你不去补充，就造成了越来越多的能量缺失，最终完全没有了向上的能量、完全垮塌、完全崩溃。就是那句古语的翻版：“千里之堤、溃于蚁穴”。
+
+
+
+
+
+## 感悟
+
+* 看手机、思考纠结、身体劳作，都会消耗人的能量，从而导致禅修状态不佳，因此需要减少一切不必要的能量消耗，以维持良好的状态
+* 打坐后精神是因为杀灭了妄念，减少了精神内耗。
+
+
+
+# 集中问答44~50
+
+## 摘录
+
+> 解脱，有五层意思。
+>
+> * 第一层是理解上的解脱。是从知识获取上，认识了解脱。
+> * 第二层是当下放下，当下自在的解脱。也就是A同学刚才说的解脱。
+> * 第三层是悟道时的“心解脱”。
+> * 第四层是功法上的“身解脱”。
+> * 第五层是悟道和功法都达到的“身心双解脱”。
+
+
+
+> 痴情也是一种“傻业发作”。因为Ta傻到认为世界上只有对方一个人，Ta傻到认为对方不可替代。宝师文集以前的文章早就讲过，这个世界上的任何人都是可以死掉的，事实也是每个人最终都会死，每个人都是可以替代的，谁死了地球都照样转……
+
+
+
+
+
+## 感悟
