幻我大话题前10篇

--- a/20.md
+++ b/20.md
@@ -164,6 +164,113 @@
 
 
 
+> 由于你在灭尽定之中的“受想行识”全都处于寂灭状态，虽然还有肉质身体，但这个肉质身体已经处于“完全无知无觉”的状态。换言之，你的业流和你的意识、你的心、你的神经活动、完全停止了。这就造成了一个结果：“灭尽定中你没有任何业力产生。”
+>
+> 说人话：“灭尽定里你没有任何的造业。你的业力在灭尽定里中断了。
 
+
+
+> 灵体的上升与下降，其实就是能量的上升与下降。灵体在灵界其实是一种飘忽的状态，决定你暂时上升或暂时下降的因素就是你此时产生的情绪或频率高低。或者说就是你此时能量的高低。
+>
+> 宝系禅通过法操清理治疗这些问题的时候，被清理者会很明显的感到效果，但**由于被清理者自己的业力拉拽问题，所以不会清理一次就产生永久有效的结果。因此就要不断的清理复查，争取让这种清理的力量大于被清理者自己业力的力量，然后才能达到长期有效**。
+>
+> 当你有上述那些负面情绪的时候，**你第一要做的就是清理掉这些负面情绪**，不管是盖章杀灭还是雨刷刮灭、或者刷搞笑视频、群里聊天、看电影、去健身，反正你要做的就是：“**立即提升你的能量值。立即摆脱与低灵同频的状态**”。
+>
+> **关键是短时间大量正能量的充能，会让你全身的细胞都能感到微微颤动、舒适、感觉被一种力量充满，这就是真实的充能体感。**
+>
+> **因为你能量缺失，所以你对肉体灵体和意识的管控力度减弱，于是导致其它的灵体或能量体接管了你对自己肉体灵体和意识的管控权。”明白了这个道理，你就知道了自己为什么有时候产生了很多不自主、不自控的一些言行。**
+>
+> 比如，你没想睡觉，可呆了一分钟，你睡着了。比如，你没想发脾气，可人家说了一句话，你咣当一下就火冒三丈。比如，你本来好好的，可看到闺蜜跟男友分手，你忽然觉得人生太没意思了，忽然一下你就颓废了。比如，本来给孩子辅导作业，可他不会，你忽然感到无比悲哀，你似乎看到他没有未来了，你觉得你的生活完蛋了，你变成了自责为什么要生他，然后你万分颓丧……
+>
+> 
 
 ## 感悟
+
+
+
+# 幻我大课题
+
+## 摘录
+
+>  对妄念的杀灭要深入，不仅要杀灭“表意识”中的妄念，**更要杀灭妄念的来源、也就是潜意识、深层意识中的“幻我”**，它其实是你N多妄念的生产者。
+>
+> 禅修方面同样，只有彻底捣毁你产生妄念的“假我、幻我、本我、自我、贪我、嗔我、痴我、傻我、慢我、疑我、垃圾我、魔性的我、肮脏的我、低能量的我、算计他人的我、没有大爱的我、动物性思维的我、各种负面的我、负能量的我。”你的禅修才能有实质性的进步与提升。
+>
+> **“幻我”是所有这些假我的统称，每个人都是由这些假我构成的**。这些假我都是你的面具、躯壳、都是你灵体和意识的一部分，都处于四维意识世界。
+
+
+
+> 因为所有这些“我”其实都是“假我、幻我、欲望的本我”衍生出来的“幻我之一”，这些都是“不同意义上的幻我”，都不是你“本真的我”，**你“本真的我”仅仅是你“根意识的我”，但这个“根意识的我”是空无的。**
+>
+> ...
+>
+> “幻我”从表面上看，是一个具有你形象样貌的“意识界的人”，但很多时候，“幻我”并不以这个“意识人”的形象出现，**Ta仅仅以“想法、主意、思维、意识方向”的形式出现，它出现在你的脑子里指导你去怎么做，给你一个解决问题的方法，让你说某种话，做某件事，让你觉得这就是你自己想出来的方法**
+>
+> ...
+>
+> 因此**“多我并存”理论其实就是“幻我”的基础讲解版，因为“多我并存”，所以，“不同的多我产生了不同的幻我、假我”**。
+>
+> 因为“我”的实质就是“多我叠加态”，所以，“我”有时候表现的是个很好的人，有时候却做了很坏的事儿；有时候很有道德观念，有时候也很缺德；有时候很上进，有时候很懈怠；有时候无端的很高兴，有时候又无端很悲伤……
+>
+> 这种“矛盾的自我、错乱的自我、不统一的自我”实际上都是因为“多我并存”、都是因为“不同的幻我、假我、在不同的时候、面对不同的人事物、对我的操纵。”
+>
+> 
+>
+> **“妄念的根源是‘多我叠加态’之中的某一个幻我假我的意识显现。”**
+>
+> **换言之：“幻我假我创造了妄念！”**
+>
+> **以此类推，你脑子里的所有妄念，都是你不同时期、不同事件、不同类别的你自己的幻我假我在折腾他们自己的事儿，无非就是被你在打坐中看见了而已。**
+>
+> **杀灭妄念只是杀灭了一个表象，只是杀灭了某一个幻我假我当时冒出来的意识影像，如果你继续追查，就会找到那个“键政侠自我”、“小学的自我”，如果你不想再被他们冒出来的妄念骚扰，你就要继续杀灭你的那些无数的幻我、假我，因为是他们创造了那些八竿子打不着的妄念。**
+
+
+
+> 当你明白了这个道理之后，**你在杀灭妄念的同时，就要追查到这个妄念的来源，追查到那些“幻我假我”，且一并杀灭，使之永不再生**。
+>
+> 不管你的“幻我假我”有多少，它毕竟只是你大脑里的“意识物体”。“**四维里产生的妄念和幻我假我毕竟是四维意识世界的产物！不是五维禅天的产物！”这是核心点！**
+>
+> 每个人从灵体诞生到现在的千、万、亿年里，都曾经当过人，当过各种动物，当过各种植物，当过各种矿物，当过各种微生物，当过各种昆虫，当过各种妖魔鬼怪，也或者当过各种天人菩萨，当过各种外星人、外星动物、外星植物等等。反正这个世界存在的、或者别的世界存在的、你基本都当过。
+>
+> 从这个意义上讲，“你本质上有N多的各种物体的幻我、各种人的幻我、各种动物植物矿物的幻我、各种妖魔鬼怪的幻我、各种神仙菩萨的幻我、都在你灵体里与你共存，都在你的业力线里、这个扒拉你一下、那个扒拉你一下的安排着你的命运、指导着你的言行。”
+
+
+
+> 所以，为了避免你那些意识碎片、被废弃的垃圾意识、在你的意识世界里形成更多的垃圾、衍生出更多的“意识混合物”，不断清理自己的意识垃圾就是日常必须的操作。
+
+
+
+> 你怕是因为你根本不知道“狮子灭章”有多牛逼！这灭章就是机关枪、榴弹炮，一般的敌人一梭子就干掉了，除非来了八辆坦克你可能招架不住。但如果你有“穿甲弹”，别说八辆坦克，八十辆坦克也不够你玩耍得分的。
+>
+> 这里说的“穿甲弹”就是你的“意识射流”，说句不该透露的话：“**你只要专精的操作，这个狮子灭章可以杀灭三界六道一切妖魔鬼怪！**”
+>
+> 你没杀灭是因为你的力度不够，意识射流不够，意识专精度不够，而不是灭章不好使！
+
+> 这样的人因为错误的概念太多，错误的方法太多，错误的思想太多，错误的路径太多，且惯性使然、根本无法放弃自己的那些错误。**因此，内心里对宝系禅无法做到全然相信，表面在宝禅群里修，其实天天在家还用自己的错误方法。这情况，没法进步。**
+
+>  这其实就是普通人的禅修现状：“一个月的新鲜、两个月的累，三个月的懈怠、半年的退。”
+>  ......
+>  原因有很多，但归根结底就一条：“能量缺失”。
+>
+>  必须记住的禅修箴言是：禅修需要灵体的能量，充能吸能就是给灵体吃饭、就是给灵体提供能量。所以，必须像你的肉体一天三顿饭一样的给灵体充能吸能，你就会有很强的灵体能量、辅助你获得禅修的大成就。
+>
+>  所以，真正想好好禅修的同学，每天让“灵体吃饭”就是必须的。而且要一天三顿。
+
+> 人的精神进化、意识进化、同人的肉体进化一样，必须由外力干预，外力才能打破你的思维定势、辅助你进行精神与意识的升级，否则你仅仅在自己的小圈子里，如同坐井观天的小青蛙，自己根本不知道怎么进化、怎么迭代、怎么升级、怎么跳出自己的小圈子。
+>
+> **这种“外力辅助、外力干预”体现在禅修方面就是正确的禅修引导**。
+
+> **“幻我假我”说到底就是你的业力体现，只不过是“具象化”了。**
+>
+> 因为“业力是抽象概念”，没有一个固化形象，也没有让你认知的特点，顶多就是显现为一条黑线，就是我们常说的“业力线”
+>
+> **这条黑色业力线内部的场景其实就是无数个你的“幻我假我”在前生宿世、在你前半生的各种形象、各种言行的造作，就是各个时期你形成的固化意识、各个阶段你对世界理解的局限性、各个人事物对你造成的意识影响、各种五毒二十毒的集合汇总。**
+>
+> 
+
+
+
+
+
+
+
