完成第二十册的笔记

--- a/20.md
+++ b/20.md
@@ -265,12 +265,73 @@
 > 因为“业力是抽象概念”，没有一个固化形象，也没有让你认知的特点，顶多就是显现为一条黑线，就是我们常说的“业力线”
 >
 > **这条黑色业力线内部的场景其实就是无数个你的“幻我假我”在前生宿世、在你前半生的各种形象、各种言行的造作，就是各个时期你形成的固化意识、各个阶段你对世界理解的局限性、各个人事物对你造成的意识影响、各种五毒二十毒的集合汇总。**
+
+
+
+> 你积极，就有积极的因果；
 >
-> 
+> 你消极，就有消极的因果；
+>
+> 你快乐，就有快乐的因果；
+>
+> 你焦虑，就有焦虑的因果。
+>
+> 你禅修，就有禅修的因果；
+>
+> 你摆烂，就有摆烂的因果。
+>
+> 你慈悲，就有慈悲的因果；
+>
+> 你嗔恨，就有嗔恨的因果。
+>
+> 所有的折腾都是你自愿的，所有的上进也都是你自愿的，所有的堕落也是你自己选择的。谁都赖不着，都是你自己的“造业”
 
 
 
+> 所有人都说“修有所成太难了”，我也确实这么认为，有些人当初“感觉修有所成”，只是修成了一部分，当时觉得一点都不难，但后来“毒发导致禅修中断或结束”，再走回正路不知哪年哪月，**这就是“修有所成太难了”，这种难，难的是毅力，是坚持，是不退转，是终其一生的精进**。
+>
+> 今生修了一段，之后被毒素侵扰、因业力发作、停修不修，或许后半辈子都转不回来了，那这辈子就这么草草收场？不知某些人下辈子是否还能再来人间，就算你来了，我可能也不在了，但愿有人能继续指导那些人走上终极解脱的正路……
 
+
+
+> **宝师文集以前的文章早就讲过，“遇到感觉不好的境界，就要迅速脱离**。
+>
+> 换言之，所有的犯傻、一时糊涂、不知道怎么办、没主意、蒙圈，都是你的“傻我发作”都需要你立即杀灭。
+>
+> “腐蚀性思维”的根本原因，
+>
+> * 第一是能量缺失、且长期缺失。
+> * 第二，是负面信息、垃圾意识、惰性思维的长期淤积且不清理。
+> * 第三，是“幻我假我的各种套壳”对这种意识和言行的保护、对外来意识的抗拒。
+> * 第四，因为自己的知识领域从未涉及到这方面、自己对此一无所知。
+> * 第五，自己周围、社会上、媒体上的一切错误言论对自己意识产生的潜移默化的腐蚀、自己根本没有意识到。
+> * 第六，自己意识到、也知道要改正，但就是不行动，依然被“腐蚀性思维”击穿式的全控制。
+
+
+
+> 换言之，改了你过去的“某个因”，就等于改了你“现在的某个果”，因为你现在的果的改变、又造成了“新的因”，这个“新的因”会导致你未来产生“新的果”。而不是你最早的“过去的因”导致了现在的果、又导致了未来的“旧的果”。
+>
+> 这两段有点绕脖子，仔细多读几遍就明白了。
+>
+> **“命运的实体根本就不存在”！**这是一个改变全人类思维定势的重大论断。这必将成为人类认识命运、改变命运的重大理论和实践的指导方针。
+>
+> **你必须记住的是，你的命运是靠你现在的努力而改变的。而不是你今生的命里注定、必须成功或必定失败的。你成功的关键第一是努力，第二是方法，第三是机遇，第四是条件或说是资源，第五是毅力也就是坚持。**
+
+
+
+> 这些**意识生命体**就是靠着你的意识能量存活、且靠着你的意识能量强大，它们会把你敲骨吸髓的吸食干净，直到你肉体死了，它们都不会死，它们会占据你的灵体继续存活，最终，你的灵体就不是你了，就是它们了。
+
+
+
+> **因为你烦恼也解决不了某些问题，你焦虑也解决不了某些问题**。有问题最好的方法就是直接去解决，而不是看着问题发愁。另外，很多的烦恼、焦虑、发愁都是没必要的，属于没事儿给自己添堵的行为。
+
+
+
+> 其实，“幻我假我”的生成**有很大的业力原因**，也就是“幻我假我”具有的业力属性。
+>
+> 这些前世、或者说这些“幻我假我”在不同的时间、不同的地点、不同的环境、不同的事件上、在你不同的判断、不同的选择的时候，会静悄悄的冒出来，影响你，让你产生对或错的选择。说句人话，是你的业力之中的“幻我假我”在决定着你现在的人生和未来的命运。
+>
+> 你在决策、选择的时候，其实是你的某个“幻我假我”在悄悄的替你做决定。也就是说，**你现在的某个决策、选择是受你的前生业力影响**。只不过你“觉不出来”而已。
 
 
 
